@@ -1,0 +1,29 @@
+/*
+ * ArgonMS MapleStory server emulator written in Java
+ * Copyright (C) 2011-2012  GoldenKevin
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+/**
+ * Muirhat (NPC 1092007)
+ * The Nautilus: Top Floor - Hallway (Map 120000100)
+ *
+ * Small talk.
+ *
+ * @author GoldenKevin (content from KiniroMS r227)
+ */
+
+npc.say("The Black Magician and his followers. Kyrin and the Crew of Nautilus.\n"
+		+ "They'll be chasing one another until one of them doesn't exist, that's for sure.");
